--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="topnav-centered">
         <a class="active" href="#home">Home</a>
         </div>
+        <div class="topnav-left">
         <a href="#hero-section">Jo Scar</a>
         <a href="#contact">Contact</a>
+        </div>
         <div class="topnav-right">
         <a href="#about-section">About</a>
         <a href="#Skills">Skills</a>
